# ku

./: .editorconfig  .gitignore  Makefile  README.md  go.work  go.work.sum  package-lock.json  package.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: go-test.yml  node-test.yml  release.yml  rust-test.yml
browser-ui/: .gitignore  index.html  jest.config.ts  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
browser-ui/src/: App.css  App.tsx  KustoEditor.tsx  main.tsx
browser-ui/src/atom/: editorAtom.ts  sessionAtom.ts  tableAtom.ts
browser-ui/src/client/: QueryBuilder.ts  api.ts  index.ts
browser-ui/src/component/: EditorPane.tsx  (+4 more)
client/: jest.config.ts  package-lock.json  package.json
client/src/: index.test.ts  index.ts
docs/: getting_started.md
kql/: QueryBuilder.ts  expressionHelper.ts  index.test.ts  index.ts  kustoHelper.ts  package.json  parseExpressionHelper.ts  tsconfig.json
protos/: .gitignore  Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum  package-lock.json  package.json  tsconfig.json
prql-browser/: index.html  package.json  sw-vite.config.ts  vite.config.ts
prql-browser/src/: App.css  App.tsx  main.tsx  sw.ts
prql-js/: .gitignore  Cargo.toml  package.json
prql-js/src/: lib.rs  lsp.rs  rename_table.rs  table.rs
prql-js/src/lsp/: folding_ranges.rs  source.rs
server/: .gitignore  .goreleaser.yaml  Dockerfile  Makefile  go.mod  go.sum
ui/: .prettierrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.ts  settings.ts  style.css
(+97 files in other folders)
