[package]
name = "prql-js"
version = "0.4.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

prql-compiler = { git = "https://github.com/bcho/prql", rev = "d8c58f70ff5e34043bfdb5559d9291f8d58baa38" }
anyhow = "1.0.68"
serde = "1.0.152"
js-sys = "0.3.60"
serde_json = "1.0.91"

[dev-dependencies]
insta = { version = "1.28.0", features = ["colors", "yaml", "console"] }
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
